[gd_scene load_steps=2 format=3 uid="uid://byjwhn2ghsvpt"]

[ext_resource type="Script" path="res://Node/CharterNode.gd" id="1_a6eym"]

[node name="CharterNode" type="PanelContainer"]
offset_right = 113.0
offset_bottom = 44.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_a6eym")

[node name="NameAndOverwriteContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0

[node name="NodeTypeNameContainer" type="PanelContainer" parent="NameAndOverwriteContainer"]
custom_minimum_size = Vector2(128, 48)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NameAndOverwriteContainer/NodeTypeNameContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="NodeTypeName" type="RichTextLabel" parent="NameAndOverwriteContainer/NodeTypeNameContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "[center]node"
fit_content = true

[connection signal="child_order_changed" from="NameAndOverwriteContainer" to="." method="_on_name_and_overwrite_container_child_order_changed"]
